--- a/package.json
+++ b/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "portfolioo",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.9.0",
+    "@react-email/components": "0.0.25",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^4.11.0",
-    "resend": "^1.1.0"
+    "react-toastify": "^10.0.5",
+    "resend": "^1.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.3.2",
+    "@eslint-react/eslint-plugin": "^1.13.0",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.11",
     "postcss": "latest",
+    "react-email": "3.0.1",
     "tailwindcss": "latest",
     "typescript": "latest"
-  }
+  },
+  "packageManager": "pnpm@9.9.0"
 }
